--- a/commerce/auctions/templates/auctions/login.html
+++ b/commerce/auctions/templates/auctions/login.html
@@ -116,7 +116,7 @@
 
 			if (isValid) {
 				submitBtn.style.backgroundColor = "#3665F3"; // Corrected property name
-			} 
+			}
 		}
 
 		username.addEventListener("input", updateSubmitBtn); // Add event listener for username
@@ -124,16 +124,22 @@
 
 		username.addEventListener("change", updateSubmitBtn); // Add event listener for username
 		password.addEventListener("change", updateSubmitBtn);
-
-
-
 	</script>
 	<footer>
 		<div class="footer-container3">
 			<div class="footer-term-div3 flex justify-center">
-				<span>Copyright © 1995-2023 eBay Inc. Tous droits réservés. <a class="footer-term" href="">Conditions d'utilisation</a>, <a class="footer-term" href="">Avis sur les données personnelles</a>, <a class="footer-term" href="">Conditions d'utilisation des services de paiement</a>, <a class="footer-term" href="">cookies</a> et <a class="footer-term" href="">AdChoice</a>	
+				<span
+					>Copyright © 1995-2023 eBay Inc. Tous droits réservés.
+					<a class="footer-term" href="">Conditions d'utilisation</a>,
+					<a class="footer-term" href=""
+						>Avis sur les données personnelles</a
+					>,
+					<a class="footer-term" href=""
+						>Conditions d'utilisation des services de paiement</a
+					>, <a class="footer-term" href="">cookies</a> et
+					<a class="footer-term" href="">AdChoice</a>
 				</span>
-			</div>	
-		</div>		
+			</div>
+		</div>
 	</footer>
 </html>
