add keepNote and noteList model and views => working on search view

--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -246,7 +246,7 @@
 
 			<!-- ======= MIDDLE SIDE(rightside) (CONTENT) ======= -->
 			<div class="content-settings-container">
-				<div class="emails-content" data-flexed="false">
+				<div class="emails-content grow" data-flexed="false">
 					<!-- === CONTENT BODY BUTTONS(headers)-->
 					<div class="content-hearder">
 						<div id="header-left-default" class="left-button">
