--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -508,7 +508,7 @@ button:focus {
 	width: 16em;
 }
 .sidebar-flexed {
-	width: 4em;
+	width: 5em;
 }
 
 .btn-compose {
@@ -1955,10 +1955,10 @@ textarea {
 	width: 100%;
 	border-radius: 0.5rem;
 	border: 1px solid #dadce0;
-	padding-top: 0.5em;
-	padding-bottom: 1em;
-	padding-left: 1em;
-	padding-right: 0.75em;
+	padding-top: 0.25em;
+	padding-bottom: 0.5em;
+	padding-left: 0.65em;
+	padding-right: 0.25em;
 }
 .noteList-div:hover {
 	box-shadow: 0px 1px 3px 0.5px rgba(0, 0, 0, 0.15);
@@ -1970,7 +1970,7 @@ textarea {
 }
 
 .note-titleInput input {
-	max-width: 13.5em;
+	max-width: 14.5em;
 	border: transparent;
 	outline: none;
 
@@ -1999,6 +1999,10 @@ textarea {
 	height: 2em;
 }
 
+.list-noteItem {
+	margin-top: 0.5em;
+}
+
 .list-noteItem input {
 	color: #5f6368;
 	font-size: 0.88rem;
@@ -2006,6 +2010,9 @@ textarea {
 
 .add-noteList {
 	position: relative;
+	padding: 0.5em 0.75em;
+	margin-right: 0.75em;
+	border-radius: 0.25em;
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
 
@@ -2019,18 +2026,39 @@ textarea {
 
 .checked-notes-wrapper {
 	border-top: 1px solid #b9b9b9;
-	margin: 0.25em;
-	padding-top: 0.25em;
+	margin-top: 0.5em;
+	padding-top: 0.5em;
 	display: none;
 }
 
-.checkec-notes-count {
+.checked-count {
 	color: rgba(0, 0, 0, 0.54);
 	font-family: "Inter";
 	font-size: 0.75rem;
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
+}
+
+.checked-show {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0.2em;
+	border-radius: 6.25em;
+	margin-left: -3px;
+}
+
+.checked-count:hover,
+.checked-count:focus,
+.checked-show:focus {
+	color: #3c4043;
+	outline: none;
+	background: transparent;
+}
+
+.checked-notes {
+	margin-top: 0.25em;
 }
 
 .checked {
@@ -2041,6 +2069,13 @@ textarea {
 	padding: 0.2em;
 }
 
+.NoteCheckbox-btn {
+	padding: 0.3em;
+}
+
+.negative-left {
+	margin-left: -4px;
+}
 .no-margin {
 	margin: 0;
 }
