--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -27,11 +27,13 @@
 				</div>
 				<!-- Email search bar-->
 				<div class="search-bar">
-					<form action="">
-						<div class="search-form">
-							<div class="search-icons-btn"><img src="static/icons/search.svg" /></div>
-							<input class="grow" type="text" name="query"/>
-							<div class="search-icons-btn"><img src="static/icons/tune.svg" /></div>
+					<form class="mail-searchForm" action="">
+						<div id="searchEmail-form" class="search-form">
+							<div class="flex align-center">
+								<div class="search-icons-btn"><img src="static/icons/search.svg" /></div>
+								<input class="search-input grow" type="text" name="query" placeholder="Search email"/>
+								<div class="search-icons-btn"><img src="static/icons/tune.svg" /></div>
+							</div>
 						</div>
 					</form>
 				</div>
